# weed_robot_description

./: CMakeLists.txt  README.md  manifest.xml  package.xml
config/: weed_robot.yaml
launch/: load_robot.launch  rviz.launch  weed_triangulator.launch
meshes/: fork.stl  fork_heavy.stl  panels.dae  panels.stl  panels_heavy.stl  sprayers.stl  wheel.stl  wheel_heavy.stl
rviz/: bottom.rviz  model.rviz  normal.rviz  top.rviz
urdf/: gazebo.xacro  macro.xacro  material.xacro  weed_robot.xacro  weed_robot_description.urdf
