<?xml version="1.0"?>
<package format="2">
  <name>weed_robot_description</name>
  <version>0.0.0</version>
  <description>The weed Removing Robot package</description>

  <maintainer email="pire@cifasis-conicet.gov.ar">taihu</maintainer>

  <license>BSD</license>
  <author email="pire@cifasis-conicet.gov.ar">Taihú Pire</author>
  <author email="ismaelaitd@gmail.com">Ismael Ait</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
